Fix spacing.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -602,6 +602,9 @@ summary {
     background: var(--intro-footer-bg);
     padding: 7px;
     color: var(--intro-footer-text-color);
+}
+
+#footer {
     margin-bottom: 10px;
 }
 
